Fix icon alignment, scrollbar color on Chromium

--- a/site/gatsby-site/src/tailwind.css
+++ b/site/gatsby-site/src/tailwind.css
@@ -511,7 +511,7 @@
         width: 0.25rem;
     }
     #sidebar-tree::-webkit-scrollbar-thumb {
-        @apply bg-gray-400;
+        @apply bg-gray-300;
     }
     #sidebar-tree::hover::-webkit-scrollbar {
         width: 0.5rem;
